test: fix flaky tests in CompanyControllerTest based on PR review